# bpmninja

./: .antigravityignore  .gitignore  AGENT_GUIDELINES.md  CLAUDE.md  Cargo.toml  README.md  devbox.json  docker-compose.yaml  engine_logs.jsonl  example.bpmn  improvements.md  pack.sh  test_cron.rs
.agent/: manifest.json
.agent/rules/: 01_GLOBAL_DIRECTIVES.md  AGENT_CONVENTIONS.md  BPMN_PARSER_AGENT.md  BPMN_WORKFLOW_ENGINE.md  CLAUDE.md  CROSS_CRATE_WORKFLOW.md  DEPENDENCY_MANAGEMENT.md  ENGINE_SERVER_AGENT.md  NATS_MESSAGE_BROKER.md  NATS_PERSISTENCE_AGENT.md  ORCHESTRATOR_AGENT.md  PROJECT_CONTEXT.md  RUST_AGENT_RULES.md  RUST_ENGINE_AGENT.md  TAURI_BACKEND_AGENT.md  TAURI_REACT_UI_AGENT.md  VERSIONING.md
.agent/workflows/: build.md  dev-tauri.md  lint.md  test.md  verify-ui.md  verify.md
.agents/rules/: antigravity-rtk-rules.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  docker-publish.yml  fuzzing.yml  mutation-tests.yml  pages.yml  release.yml  update-quality-metrics.yml
agent-orchestrator/: Cargo.toml
agent-orchestrator/src/: main.rs
api-spec/: main.tsp  package-lock.json  package.json
bpmn-ninja-external-task-client/: README.md  package-lock.json  package.json  test-output.txt  tsconfig.json  vitest.config.ts
bpmn-parser/: Cargo.toml
desktop-tauri/: README.md  components.json  eslint.config.js  lint_output.txt  package-lock.json  package.json  playwright.config.ts  rewrite_deployed.py  rewrite_instances.py  tailwind.config.js  vite.config.ts
docs/: architecture.md  openapi.yaml  quality-badges.json  quality-metrics.json
engine-core/: Cargo.toml  fix_tests.py
engine-core/benches/: engine_bench.rs
engine-core/src/: condition.rs  engine.rs  error.rs  history.rs  lib.rs  model.rs  persistence.rs  tests.rs  timer_definition.rs
engine-core/src/adapter/: in_memory.rs  mod.rs
engine-core/src/domain/: definition.rs  element.rs  error.rs  file_ref.rs  flow.rs  listener.rs  mod.rs  multi_instance.rs  tests.rs  token.rs
engine-core/src/engine/: boundary.rs  definition_ops.rs  executor.rs  gateway.rs  instance_ops.rs  instance_store.rs  message_processor.rs  mod.rs  persistence_ops.rs  process_start.rs  registry.rs  retry_queue.rs  service_task.rs  stress_tests.rs  tests.rs  timer_processor.rs  types.rs  user_task.rs
engine-core/src/engine/executor/: completion.rs  helpers.rs  mod.rs  next_action.rs  parallel.rs
engine-core/src/engine/handlers/: events.rs  gateways.rs  mod.rs  sub_processes.rs  tasks.rs
engine-core/src/engine/tests/: mod.rs  stress_tests.rs  unit_tests.rs
engine-core/src/history/: mod.rs
engine-core/src/port/: mod.rs  persistence.rs
engine-core/src/runtime/: constants.rs  instance.rs  mod.rs  pending.rs  stats.rs
engine-core/src/scripting/: runner.rs
engine-core/tests/: bpmn_compliance.rs  complex_gateway_integration.rs
engine-server/: Cargo.toml  Dockerfile
engine-server/src/: lib.rs  log_buffer.rs  log_nats.rs  main.rs  observability.rs  server.rs
engine-server/src/server/: deploy.rs  files.rs  history.rs  instances.rs  logs.rs  messages.rs  mod.rs  monitoring.rs  state.rs  tasks.rs  timers.rs
engine-server/tests/: e2e_call_activity.rs  e2e_deploy.rs  e2e_file_variables.rs  e2e_files.rs  e2e_gateways.rs  e2e_history.rs  e2e_lifecycle.rs  e2e_migration.rs  e2e_monitoring.rs  e2e_service_tasks.rs  e2e_start_errors.rs  e2e_suspend_resume.rs  e2e_variables.rs  e2e_versioning.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bpmn_parser.rs  fuzz_condition.rs  fuzz_cron_expression.rs  fuzz_deploy_roundtrip.rs  fuzz_iso8601_duration.rs  fuzz_rhai_script.rs  fuzz_token_deserialize.rs
graphify-out/: GRAPH_REPORT.md  graph.json
persistence-memory/: Cargo.toml
persistence-nats/: Cargo.toml
persistence-nats/src/: client.rs  lib.rs  models.rs  persistence.rs  tests.rs  trait_impl.rs
src/: engine.rs  error.rs  main.rs  model.rs  persistence.rs
(+143 files in other folders)
