[workspace]
members = [
    "engine-core",
    "bpmn-parser",
    "persistence-nats",
    "agent-orchestrator",
    "desktop-tauri/src-tauri"
, "engine-server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
