[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
async-trait = "0.1"
rhai = { version = "1.19.0", features = ["serde", "sync"] }
