[package]
name = "engine-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
engine-core = { path = "../engine-core" }
bpmn-parser = { path = "../bpmn-parser" }
persistence-nats = { path = "../persistence-nats", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
nats = ["dep:persistence-nats"]
